--- a/topology_exploration.ipynb
+++ b/topology_exploration.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "GDA_final.ipynb",
+      "name": "topology_exploration.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -28,7 +29,7 @@
       "source": [
         "!pip install gudhi"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -56,7 +57,7 @@
       "source": [
         "!pip install mayavi"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +134,7 @@
       "source": [
         "!pip install POT"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +164,7 @@
       "source": [
         "!pip install eagerpy"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +211,7 @@
         "import tensorflow as tf\n",
         "%matplotlib inline"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +255,7 @@
         "    ) for u in files_list\n",
         "]"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -274,7 +275,7 @@
         "print(\"distance matrix\")\n",
         "D.head()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -853,7 +854,7 @@
         ")\n",
         "Rips_simplex_tree_protein = skeleton_protein.create_simplex_tree(max_dimension = 2)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -869,7 +870,7 @@
         "print(\"Number of simplcies in the Rips complex\")\n",
         "Rips_simplex_tree_protein.num_simplices()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -926,7 +927,7 @@
         "X_transformed = embedding.fit_transform(D)\n",
         "X_transformed.shape"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -956,7 +957,7 @@
         "fig = plt.figure()\n",
         "plt.scatter(X_transformed[:, 0], X_transformed[:, 1], label = 'MDS');"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -981,7 +982,7 @@
       "source": [
         "alpha_complex = gd.AlphaComplex(points = X_transformed)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -992,7 +993,7 @@
       "source": [
         "st_alpha = alpha_complex.create_simplex_tree()"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1008,7 +1009,7 @@
         "print(\"The number of alpha simplices\")\n",
         "print(st_alpha.num_simplices())"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1050,7 @@
         "crater = pickle.load(f)\n",
         "f.close()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1066,7 +1067,7 @@
         "#visualize point cloud\n",
         "plt.scatter(crater[:, 0], crater[:, 1], s = 0.1)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1116,7 +1117,7 @@
         "    bw_method = .3\n",
         ")"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,7 +1159,7 @@
         "kde = KernelDensity(kernel = 'gaussian', bandwidth = 0.3).fit(crater)\n",
         "positions = np.array([[u, v] for u in xval for v in yval])"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1175,7 +1176,7 @@
         "print(\"range of filtation: \")\n",
         "print(min(filt_values), max(filt_values))"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1206,7 +1207,7 @@
         "print(\"The number of simplices is then: \")\n",
         "cc_density_crater.num_simplices()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1260,7 +1261,7 @@
         "#Data set & experiment from Kovacev-Nikolic et al. (https://arxiv.org/pdf/1412.1394.pdf)\n",
         "D0 = dist_list[0]"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1277,7 +1278,7 @@
         "\n",
         "Rips_simplex_tree_protein0 = skeleton_protein0.create_simplex_tree(max_dimension = 2)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1297,7 +1298,7 @@
         "for i in range(20):\n",
         "    print(BarCodes_Rips0[i])"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1344,7 +1345,7 @@
         "gd.plot_persistence_diagram(BarCodes_Rips0)\n",
         "print(\"0-dimensional features are the red points (holes of dimension 0, namely connected components).\\n The last connected component dies at infinity in the filtration (red point at the top). \\n The 1-dimensional features are represented in blue\")"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1397,44 +1398,38 @@
         "id": "fPLpq1dhsE8K"
       },
       "source": [
+        "#loss function from https://github.com/GUDHI/TDA-tutorial/blob/master/Tuto-GUDHI-optimization.ipynb\n",
         "def myloss(pts):\n",
         "    alpha = gudhi.AlphaComplex(points=pts)\n",
-        "    # Build the Delaunay triangulation\n",
         "    st = alpha.create_simplex_tree(default_filtration_value=True)\n",
         "    X = pts.detach().numpy()\n",
         "    for s in st.get_skeleton(1):\n",
         "        if len(s[0]) == 1:\n",
-        "            # vertex\n",
         "            st.assign_filtration(s[0], 0)\n",
         "        else:\n",
-        "            # edge length\n",
         "            st.assign_filtration(s[0], ((X[s[0][1]] - X[s[0][0]]) ** 2).sum())\n",
-        "    # For triangles, use the max of the edges\n",
         "    st.make_filtration_non_decreasing()\n",
         "    st.compute_persistence()\n",
         "    p = st.persistence_pairs()\n",
-        "    # Keep only pairs that contribute to H1, i.e. (edge, triangle), and separate birth (p1b) and death (p1d)\n",
+        "\n",
         "    p1b = torch.tensor([i[0] for i in p if len(i[0]) == 2])\n",
         "    p1d = torch.tensor([i[1] for i in p if len(i[0]) == 2])\n",
         "    if len(p1b) == 0:\n",
         "        return torch.tensor(0., requires_grad=True)\n",
-        "    # Compute the distance between the extremities of the birth edge\n",
         "    b = torch.norm(pts[p1b[:,1]] - pts[p1b[:,0]], dim=-1, keepdim=True)\n",
-        "    # For the death triangle, compute the maximum of the pairwise distances\n",
+        "\n",
         "    d_1 = torch.norm(pts[p1d[:,1]] - pts[p1d[:,0]], dim=-1, keepdim=True)\n",
         "    d_2 = torch.norm(pts[p1d[:,1]] - pts[p1d[:,2]], dim=-1, keepdim=True)\n",
         "    d_3 = torch.norm(pts[p1d[:,2]] - pts[p1d[:,0]], dim=-1, keepdim=True)\n",
         "    d = torch.max(d_1, torch.max(d_2, d_3))\n",
-        "    # Same as the finite part of st.persistence_intervals_in_dimension(1), but differentiable\n",
+        "\n",
         "    diag1 = torch.cat((b,d), 1)\n",
-        "    # Total persistence is a special case of Wasserstein distance\n",
         "    perstot1 = wasserstein_distance(diag1, [], order=1, enable_autodiff=True)\n",
-        "    # Stay within the unit disk\n",
         "    disk = (pts ** 2).sum(-1) - 1\n",
         "    disk = torch.max(disk, torch.zeros_like(disk)).sum()\n",
         "    return -perstot1 + 1 * disk"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1462,7 +1457,7 @@
         "        plt.scatter(P[:, 0], P[:, 1])\n",
         "        plt.show()"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1569,22 +1564,17 @@
       },
       "source": [
         "def Cubical(X, dim, card):\n",
-        "    # Parameters: X (image),\n",
-        "    #             dim (homological dimension), \n",
-        "    #             card (number of persistence diagram points, sorted by distance-to-diagonal)\n",
         "\n",
-        "    # Compute the persistence pairs with Gudhi\n",
         "    cc = gd.CubicalComplex(dimensions=X.shape, top_dimensional_cells=X.flatten())\n",
         "    cc.persistence()\n",
         "    cof = cc.cofaces_of_persistence_pairs()[0][dim]\n",
         "    \n",
-        "    # Sort points with distance-to-diagonal\n",
+        "\n",
         "    Xs = X.shape\n",
         "    pers = [X[np.unravel_index(cof[idx,1], Xs)] - X[np.unravel_index(cof[idx,0], Xs)] for idx in range(len(cof))]\n",
         "    perm = np.argsort(pers)\n",
         "    cof = cof[perm]\n",
         "    \n",
-        "    # Retrieve and ouput image indices/pixels corresponding to positive and negative simplices\n",
         "    D = len(X.shape)\n",
         "    ocof = np.array([0 for _ in range(D*card*2)])\n",
         "    for idx in range(len(cof[:min(card, cof.shape[0])])):\n",
@@ -1592,7 +1582,7 @@
         "        ocof[D*(idx+1):D*(idx+2)] = np.unravel_index(cof[idx,1], X.shape)\n",
         "    return list(np.array(ocof.flatten(), dtype=np.int32))"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1612,18 +1602,14 @@
         "        d, c, D = self.dim, self.card, len(self.X.shape)\n",
         "        XX = tf.reshape(self.X, [1, self.X.shape[0], self.X.shape[1]])\n",
         "        \n",
-        "        # Turn numpy function into tensorflow function\n",
         "        CbTF = lambda X: tf.numpy_function(Cubical, [X, d, c], [tf.int32 for _ in range(2*D*c)])\n",
-        "        \n",
-        "        # Compute pixels associated to positive and negative simplices \n",
-        "        # Don't compute gradient for this operation\n",
+        "\n",
         "        inds = tf.nest.map_structure(tf.stop_gradient, tf.map_fn(CbTF,XX,dtype=[tf.int32 for _ in range(2*D*c)]))\n",
         "        \n",
-        "        # Get persistence diagram by simply picking the corresponding entries in the image\n",
         "        dgm = tf.reshape(tf.gather_nd(self.X, tf.reshape(inds, [-1,D])), [-1,2])\n",
         "        return dgm"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1636,7 +1622,7 @@
         "idx = np.argwhere(I[:,0] == 8)\n",
         "image = np.reshape(-I[idx[8],1:], [28,28])"
       ],
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1654,7 +1640,7 @@
         "plt.imshow(image)\n",
         "plt.show()"
       ],
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1681,7 +1667,7 @@
         "hom      = 1    # homological dimension\n",
         "n_epochs = 100  # number of optimization steps"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1693,7 +1679,7 @@
         "X = tf.Variable(initial_value=np.array(image, dtype=np.float32), trainable=True)\n",
         "model = CubicalModel(X, dim=hom, card=card)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1704,7 +1690,7 @@
       "source": [
         "optimizer = tf.keras.optimizers.SGD(learning_rate=5*1e-2)"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1722,13 +1708,11 @@
         "    \n",
         "    with tf.GradientTape() as tape:\n",
         "        \n",
-        "        # Compute persistence diagram\n",
         "        dgm = model.call()\n",
         "        \n",
-        "        # Loss is sum of squared birth coordinates\n",
         "        loss = -tf.math.reduce_sum(tf.square(dgm[:,0]))\n",
         "        \n",
-        "        # Compute and apply gradients\n",
+        "        #apply gradients\n",
         "        gradients = tape.gradient(loss, model.trainable_variables)\n",
         "        optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
         "\n",
@@ -1738,7 +1722,7 @@
         "        plt.title(\"Image at epoch \" + str(epoch))\n",
         "        plt.show()"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
